[package]
name = "llama"
version = "0.1.0"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
edition = "2018"
README = "README.md"
repository = "https://github.com/zshipko/llama"
documentation = "https://zshipko.github.io/llama/llama"
description = "Friendly LLVM bindings"
keywords = ["LLVM", "JIT", "compiler"]

[dependencies]
thiserror = "1"
lazy_static = "1"
llvm-sys = {version = "100", features=["no-llvm-linking"]}

[build-dependencies]

[workspace]
members = [
  "build",
  "wasm"
]
