[package]
name = "llama"
version = "0.14.2"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zshipko/llama"
documentation = "https://zshipko.github.io/llama/llama"
description = "Friendly LLVM bindings"
keywords = ["LLVM", "JIT", "compiler"]
license = "ISC"

[dependencies]
thiserror = "1"
lazy_static = "1"
llvm-sys = {version = "150.0.3", features=["no-llvm-linking"]}

[package.metadata.docs.rs]
features = [ "docs-rs" ]

[features]
docs-rs = []

[workspace]
members = [
  "build",
]
