[package]
name = "llama-wasm"
version = "0.1.0"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
edition = "2018"
readme = "../README.md"
repository = "https://github.com/zshipko/llama"
documentation = "https://zshipko.github.io/llama/llama_wasm"
description = "Friendly LLVM bindings (WASM)"
keywords = ["LLVM", "JIT", "WASM"]

[dependencies]
anyhow = "1"
thiserror = "1"
llama = {path = ".."}
lightbeam = {version = "0.12"}
