[package]
name = "llama-wasm"
version = "0.4.0"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
edition = "2018"
readme = "../README.md"
repository = "https://github.com/zshipko/llama"
documentation = "https://zshipko.github.io/llama/llama_wasm"
description = "Friendly LLVM bindings (WASM)"
keywords = ["LLVM", "JIT", "WASM"]
license = "ISC"

[dependencies]
anyhow = "1"
thiserror = "1"
llama = {path = "..", version = "0.4"}
lightbeam = {version = "0.15"}
